# ytdlp-downloader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
app/: main.py
app/config/: settings.py
app/db/: __init__.py  base.py  models.py
app/models/: __init__.py  download_status.py
app/routes/: __init__.py  downloads.py
app/services/: __init__.py  download_service.py
app/worker/: celery_app.py  tasks.py
