[project]
name = "ytdlp-downloader"
version = "0.1.0"
description = "Asynchronous Video Downloader API with FastAPI + yt-dlp"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Zain Ul Hassan", email = "zainulhassan4330@gmail.com" }
]
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.13.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]  # E501: long-line (Black handles), B008: FastAPI Depends pattern

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

